--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <title>Daily UI</title>
     </head>
     <body>
-        <a href="./%231/index">#1</a>
+        <a href="./01/index">#1</a>
     </body>
 </html>
