day 2 : Interactive rating component

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Daily UI</title>
     </head>
-    <body>
+    <body style="display: flex; flex-direction: column">
         <a href="./01/index">#1</a>
+        <a href="./02/index">#2</a>
     </body>
 </html>
