--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body style="display: flex; flex-direction: column">
         <a href="./01/index">#1</a>
         <a href="./02/index">#2</a>
+        <a href="./03/index">#3</a>
+        <a href="./04/index">#4</a>
     </body>
 </html>
